--- a/packing.html
+++ b/packing.html
@@ -316,6 +316,7 @@
                 {id: "3301", name: "Bonsai professional соус ГОСТРО-СОЛОДКИЙ (Китай. кухня) 1000 мл"},
                 {id: "3307", name: "Bonsai professional соус Для піци 1000 гр"},
                 {id: "3308", name: "Bonsai professional соус КИСЛО-СОЛОДКИЙ (Китай. кухня) 1000 мл"},
+                {id: "3309", name: "Bonsai professional соус Кімчі 1100 гр"},
                 {id: "3310", name: "Bonsai professional соус КУНЖУТНИЙ (густий) 1000 мл"},
                 {id: "3311", name: "Bonsai professional соус Сирний 1 кг/відро"},
                 {id: "3312", name: "Bonsai professional соус соєвий Класичний 1000 мл (концентрат 1:1)"},
@@ -326,8 +327,9 @@
                 {id: "3317", name: "Bonsai professional соус солодкий ТЕРІЯКІ (густий) 1000 мл"},
                 {id: "3318", name: "Bonsai professional соус Солодкий Чилі 5700 гр ПЕТ"},
                 {id: "3319", name: "Bonsai professional соус УНАГІ (густий) 1000 мл"},
-                {id: "3320", name: "Bonsai professional Соус УСТРИЧНИЙ (густий) 1000 мл"}
-                {id: "3321", name: "Bonsai professional соус Цезар 5200 гр"}
+                {id: "3320", name: "Bonsai professional Соус УСТРИЧНИЙ (густий) 1000 мл"},
+                {id: "3321", name: "Bonsai Professional соус Цезар 5200 гр"},
+                {id: "3322", name: "Bonsai professional соус ТАРТАР 5??? Гр"}
             ],
             "Peri Peri": [
                 {id: "3401", name: "Peri Peri соус Аризона BBQ (Американська кухня) 320 г"},
@@ -390,6 +392,49 @@
                 {id: "3612", name: "YKI соус соєвий УНАГІ 205 мл"},
                 {id: "3614", name: "YKI соус Солодкий Чилі 225 гр"},
                 {id: "3613", name: "YKI соус Солодкий-Чилі (Тайська кухня) 540 гр"}
+            ],
+            "Любисток": [
+                {id: "3801", name: "Любисток соус соєвий 210 мл"},
+                {id: "3802", name: "Любисток соус соєвий 500 мл"},
+                {id: "3803", name: "Любисток соус соєвий 980 мл"},
+                {id: "3804", name: "Любисток соус УНАГІ 210 мл"},
+                {id: "3805", name: "Любисток соус ТЕРІЯКІ 210 мл"},
+                {id: "3806", name: "Любисток соус ТЕРІЯКІ 500 мл"},
+                {id: "3807", name: "Любисток соус Кисло-солодкий 500 гр"},
+                {id: "3808", name: "Любисток соус Гостро-солодкий 500 гр"}
+            ],
+            "PL": [
+                {id: "301", name: "PL_Соус Hot Chili, 700 мл"},
+                {id: "402", name: "PL_Соус Sweet Chili 1100гр"},
+                {id: "503", name: "PL_Соус Sweet Chili, 700 мл"},
+                {id: "604", name: "PL_Соус соєвий 1000 мл"},
+                {id: "705", name: "PL_Соус соєвий Ketjap 500 мл"},
+                {id: "806", name: "PL_соус теріякі 1кг/відро"},
+                {id: "907", name: "Наповнювач «Вишневий»"},
+                {id: "1008", name: "PL_Соус Томатний 1000 гр"},
+                {id: "1109", name: "PL_Соус Томатний №95_5400 гр"},
+                {id: "12010", name: "PL_Томатна паста 1000 гр"},
+                {id: "12011", name: "PL_Соус ПЕСТО 1кг (D)"}
+            ],
+            "Своє. Свіже": [
+                {id: "3121", name: "Своє. Свіже соус Барбекю 280 гр"},
+                {id: "3122", name: "Своє. Свіже соус Болоньєзе (Італ.кухня) 280 гр"},
+                {id: "3123", name: "Своє. Свіже соус Гостро-солодкий (Китай.кухня) 280 гр"},
+                {id: "3124", name: "Своє. Свіже соус Журавлинний (Англійська кухня) 280 гр"},
+                {id: "3125", name: "Своє. Свіже соус З в’яленими томатами (Італійська кухня) 280 гр"},
+                {id: "3126", name: "Своє. Свіже соус Кетчуп (Американська кухня) 280 гр"},
+                {id: "3127", name: "Своє. Свіже соус Кетчуп Чилі 280 гр"},
+                {id: "3128", name: "Своє. Свіже соус Кисло-солодкий (Китай.кухня) 280 гр"},
+                {id: "3129", name: "Своє. Свіже соус Солодкий-Чилі (Тайська кухня) 280 гр"},
+                {id: "31210", name: "Своє. Свіже соус Тартар 280 гр"}
+            ],
+            "Премія": [
+                {id: "3131", name: "Повна чаша соус соєвий пастеризований 960мл"},
+                {id: "3132", name: "Премія соус соєвий пастеризований \"Теріякі\" 220мл"},
+                {id: "3133", name: "Премія соус соєвий пастеризований \"Теріякі\" 490мл"},
+                {id: "3134", name: "Премія соус соєвий пастеризований 220мл"},
+                {id: "3135", name: "Премія соус соєвий пастеризований 490мл"},
+                {id: "3136", name: "Майонез original 73 % ТМ «Сільпо» 300г"}
             ]
         };
 
