--- a/labeling.html
+++ b/labeling.html
@@ -183,57 +183,164 @@
         const employees = ["Соботович Л.М.", "Огаркова М.В.", "Інший"];
         const productDatabase = {
             "Bonsai": [
-                {id: "3102", name: "Bonsai соус соєвий Класичний 235 мл"}, {id: "3103", name: "Bonsai соус соєвий Класичний 500 мл"}, {id: "3115", name: "Bonsai соус соєвий 750 мл"},
-                {id: "3104", name: "Bonsai соус соєвий Класичний 890 мл"}, {id: "3101", name: "Bonsai соус соєвий Класичний 1000 мл (20531)"}, {id: "3108", name: "Bonsai соус соєвий ТЕРІЯКІ з часником та имбирем (густий) 235 мл"},
-                {id: "3109", name: "Bonsai соус соєвий УНАГІ кисло-солодкий (Густий) 240 мл"}, {id: "3105", name: "Bonsai соус соєвий ДЛЯ СУШІ з водоростями КОМБУ 235 мл"}, {id: "3111", name: "Bonsai соус соєвий ЯКІТОРІ з устрицями та кунжутом (густий) 235 мл"},
-                {id: "3106", name: "Bonsai соус соєвий ТАМАРІ з натур. медом 235 мл"}, {id: "3112", name: "Bonsai соус солодкий Теріякі 235 мл"}, {id: "3113", name: "Bonsai соус Солодкий Чилі 260 гр"},
-                {id: "3110", name: "Bonsai соус соєвий УНАГІ кисло-солодкий 500 мл"}, {id: "3116", name: "Bonsai соус соєвий Теріякі 500 мл"}, {id: "3107", name: "Bonsai соус соєвий ТЕРІЯКІ з натуральним медом 500 мл"},
-                {id: "3114", name: "Bonsai соус Солодкий Чилі 550 гр"}, {id: "3120", name: "Bonsai соус соєвий Класичний (густий) дой-пак 200 гр"}, {id: "3117", name: "Bonsai соус соєвий ТЕРІЯКІ з часником та имбирем (густий) дой-пак 200 гр"},
-                {id: "3119", name: "Bonsai соус соєвий УНАГІ кисло-солодкий (густий) дой-пак 200 гр"}, {id: "3118", name: "Bonsai соус солодкий Теріякі (густий) дой-пак 200 гр"}, {id: "3121", name: "Bonsai соус Солодкий Чилі (густий) дой-пак 200гр"}
+                {id: "3102", name: "Bonsai соус соєвий Класичний 235 мл"},
+                {id: "3103", name: "Bonsai соус соєвий Класичний 500 мл"},
+                {id: "3115", name: "Bonsai соус соєвий 750 мл"},
+                {id: "3104", name: "Bonsai соус соєвий Класичний 890 мл"},
+                {id: "3101", name: "Bonsai соус соєвий Класичний 1000 мл (20531)"},
+                {id: "3108", name: "Bonsai соус соєвий ТЕРІЯКІ з часником та имбирем (густий) 235 мл"},
+                {id: "3109", name: "Bonsai соус соєвий УНАГІ кисло-солодкий (Густий) 240 мл"},
+                {id: "3105", name: "Bonsai соус соєвий ДЛЯ СУШІ з водоростями КОМБУ 235 мл"},
+                {id: "3111", name: "Bonsai соус соєвий ЯКІТОРІ з устрицями та кунжутом (густий) 235 мл"},
+                {id: "3106", name: "Bonsai соус соєвий ТАМАРІ з натур. медом 235 мл"},
+                {id: "3112", name: "Bonsai соус солодкий Теріякі 235 мл"},
+                {id: "3113", name: "Bonsai соус Солодкий Чилі 260 гр"},
+                {id: "3110", name: "Bonsai соус соєвий УНАГІ кисло-солодкий 500 мл"},
+                {id: "3116", name: "Bonsai соус соєвий Теріякі 500 мл"},
+                {id: "3107", name: "Bonsai соус соєвий ТЕРІЯКІ з натуральним медом 500 мл"},
+                {id: "3114", name: "Bonsai соус Солодкий Чилі 550 гр"},
+                {id: "3120", name: "Bonsai соус соєвий Класичний (густий) дой-пак 200 гр"},
+                {id: "3117", name: "Bonsai соус соєвий ТЕРІЯКІ з часником та имбирем (густий) дой-пак 200 гр"},
+                {id: "3119", name: "Bonsai соус соєвий УНАГІ кисло-солодкий (густий) дой-пак 200 гр"},
+                {id: "3118", name: "Bonsai соус солодкий Теріякі (густий) дой-пак 200 гр"},
+                {id: "3121", name: "Bonsai соус Солодкий Чилі (густий) дой-пак 200гр"}
             ],
             "Bonsai Premium": [
-                {id: "3202", name: "Bonsai Premium соус cоєвий Ketjap Manis 570 г"}, {id: "3201", name: "Bonsai Premium соус cоєвий Бальзамічний 250 мл"}, {id: "3203", name: "Bonsai Premium соус cоєвий Класичний 1000 мл"},
-                {id: "3211", name: "Bonsai Premium соус cоєвий Класичний 20 л"}, {id: "3204", name: "Bonsai Premium соус cоєвий Класичний 250 мл"}, {id: "3205", name: "Bonsai Premium соус cоєвий Теріякі 250 мл"},
-                {id: "3206", name: "Bonsai Premium соус ГОРІХОВИЙ 500 гр"}, {id: "3207", name: "Bonsai Premium соус Гранатовий (НАРШАРАБ) 350гр"}, {id: "3209", name: "Bonsai Premium соус НАРШАРАБ 1300 гр"},
+                {id: "3202", name: "Bonsai Premium соус cоєвий Ketjap Manis 570 г"},
+                {id: "3201", name: "Bonsai Premium соус cоєвий Бальзамічний 250 мл"},
+                {id: "3203", name: "Bonsai Premium соус cоєвий Класичний 1000 мл"},
+                {id: "3211", name: "Bonsai Premium соус cоєвий Класичний 20 л"},
+                {id: "3204", name: "Bonsai Premium соус cоєвий Класичний 250 мл"},
+                {id: "3205", name: "Bonsai Premium соус cоєвий Теріякі 250 мл"},
+                {id: "3206", name: "Bonsai Premium соус ГОРІХОВИЙ 500 гр"},
+                {id: "3207", name: "Bonsai Premium соус Гранатовий (НАРШАРАБ) 350гр"},
+                {id: "3209", name: "Bonsai Premium соус НАРШАРАБ 1300 гр"},
                 {id: "3208", name: "Bonsai Premium соус солодкий чилі 1100 гр"}
             ],
             "Bonsai Professional": [
-                {id: "3305", name: "Bonsai professional соус БОЛОНЬЄЗЕ (Італ. кухня) 1000 мл"}, {id: "3301", name: "Bonsai professional соус ГОСТРО-СОЛОДКИЙ (Китай. кухня) 1000 мл"}, {id: "3307", name: "Bonsai professional соус Для піци 1000 гр"},
-                {id: "3308", name: "Bonsai professional соус КИСЛО-СОЛОДКИЙ (Китай. кухня) 1000 мл"}, {id: "3321", name: "Bonsai professional соус Цезар 5200 гр"}, {id: "3310", name: "Bonsai professional соус КУНЖУТНИЙ (густий) 1000 мл"},
-                {id: "3311", name: "Bonsai professional соус Сирний 1 кг/відро"}, {id: "3312", name: "Bonsai professional соус соєвий Класичний 1000 мл (концентрат 1:1)"}, {id: "3313", name: "Bonsai professional соус соєвий класичний 5000 мл ПЕТ (Концентрат 1:1)"},
-                {id: "3314", name: "Bonsai professional соус соєвий Класичний каністра 20 л New"}, {id: "3315", name: "Bonsai professional соус соєвий ТЕРІЯКІ (густий) 1000 мл"}, {id: "3316", name: "Bonsai professional соус соєвий ЯКІТОРІ (густий) 1000 мл"},
-                {id: "3317", name: "Bonsai professional соус солодкий ТЕРІЯКІ (густий) 1000 мл"}, {id: "3318", name: "Bonsai professional соус Солодкий Чилі 5700 гр ПЕТ"}, {id: "3319", name: "Bonsai professional соус УНАГІ (густий) 1000 мл"},
-                {id: "3320", name: "Bonsai professional Соус УСТРИЧНИЙ (густий) 1000 мл"}
+                {id: "3305", name: "Bonsai professional соус БОЛОНЬЄЗЕ (Італ. кухня) 1000 мл"},
+                {id: "3301", name: "Bonsai professional соус ГОСТРО-СОЛОДКИЙ (Китай. кухня) 1000 мл"},
+                {id: "3307", name: "Bonsai professional соус Для піци 1000 гр"},
+                {id: "3308", name: "Bonsai professional соус КИСЛО-СОЛОДКИЙ (Китай. кухня) 1000 мл"},
+                {id: "3309", name: "Bonsai professional соус Кімчі 1100 гр"},
+                {id: "3310", name: "Bonsai professional соус КУНЖУТНИЙ (густий) 1000 мл"},
+                {id: "3311", name: "Bonsai professional соус Сирний 1 кг/відро"},
+                {id: "3312", name: "Bonsai professional соус соєвий Класичний 1000 мл (концентрат 1:1)"},
+                {id: "3313", name: "Bonsai professional соус соєвий класичний 5000 мл ПЕТ (Концентрат 1:1)"},
+                {id: "3314", name: "Bonsai professional соус соєвий Класичний каністра 20 л New"},
+                {id: "3315", name: "Bonsai professional соус соєвий ТЕРІЯКІ (густий) 1000 мл"},
+                {id: "3316", name: "Bonsai professional соус соєвий ЯКІТОРІ (густий) 1000 мл"},
+                {id: "3317", name: "Bonsai professional соус солодкий ТЕРІЯКІ (густий) 1000 мл"},
+                {id: "3318", name: "Bonsai professional соус Солодкий Чилі 5700 гр ПЕТ"},
+                {id: "3319", name: "Bonsai professional соус УНАГІ (густий) 1000 мл"},
+                {id: "3320", name: "Bonsai professional Соус УСТРИЧНИЙ (густий) 1000 мл"},
+                {id: "3321", name: "Bonsai Professional соус Цезар 5200 гр"},
+                {id: "3322", name: "Bonsai professional соус ТАРТАР 5??? Гр"}
             ],
             "Peri Peri": [
-                {id: "3401", name: "Peri Peri соус Аризона BBQ (Американська кухня) 320 г"}, {id: "3402", name: "Peri Peri соус Болоньєзе (Італ.кухня) 310 г"}, {id: "3403", name: "Peri Peri соус Гостро-солодкий (Китай.кухня) 320 г"},
-                {id: "3404", name: "Peri Peri соус Гранатовий (НАРШАРАБ) 255 г"}, {id: "3405", name: "Peri Peri соус для Локшини WOK (Кантонська кухня) 320 г"}, {id: "3425", name: "Peri Peri соус Жовто-гарячий (Тайська кухня) 310 г"},
-                {id: "3426", name: "Peri Peri соус Журавлинний (Англійська кухня) 330 г"}, {id: "3406", name: "Peri Peri соус З в’яленими томатами (Італійська кухня) 310 г"}, {id: "3407", name: "Peri Peri соус Кетчуп (Американська кухня) 320 г"},
-                {id: "3408", name: "Peri Peri соус Кисло-солодкий (Китай.кухня) 320 г"}, {id: "3409", name: "Peri Peri соус Кунжутний (Японська кухня) 310 г"}, {id: "3410", name: "Peri Peri соус Манго-Чилі (Тайська кухня) 320 г"},
-                {id: "3411", name: "Peri Peri соус Ожиновий з перцем Халапеньйо (Мексиканська кухня) 330 г"}, {id: "3424", name: "Peri Peri соус Цезар (Американська кухня) 300 г"}, {id: "3422", name: "Peri Peri соус Ткемалі (Грузинська кухня) 320 г"},
-                {id: "3414", name: "Peri Peri соус Пряні трави (Італійська кухня) 310 г"}, {id: "3415", name: "Peri Peri соус Сацебелі (Грузинська кухня) 320 г"}, {id: "3418", name: "Peri Peri соус Солодкий-Чилі (Тайська кухня) 320 г"},
-                {id: "3419", name: "Peri Peri соус ТАРТАР (Французька кухня) 280 г"}, {id: "3420", name: "Peri Peri соус ТЕРІЯКІ sesame & ginger 180 мл"}, {id: "3421", name: "Peri Peri соус ТЕРІЯКІ sweet chili 180 мл"},
-                {id: "3417", name: "Peri Peri соус соєвий soy & wheat 180 мл"}, {id: "3423", name: "Peri Peri соус УНАГІ sweet & sour 180 мл"}, {id: "3412", name: "Peri Peri соус ПЕСТО 200 г"},
+                {id: "3401", name: "Peri Peri соус Аризона BBQ (Американська кухня) 320 г"},
+                {id: "3402", name: "Peri Peri соус Болоньєзе (Італ.кухня) 310 г"},
+                {id: "3403", name: "Peri Peri соус Гостро-солодкий (Китай.кухня) 320 г"},
+                {id: "3404", name: "Peri Peri соус Гранатовий (НАРШАРАБ) 255 г"},
+                {id: "3405", name: "Peri Peri соус для Локшини WOK (Кантонська кухня) 320 г"},
+                {id: "3425", name: "Peri Peri соус Жовто-гарячий (Тайська кухня) 310 г"},
+                {id: "3426", name: "Peri Peri соус Журавлинний (Англійська кухня) 330 г"},
+                {id: "3406", name: "Peri Peri соус З в’яленими томатами (Італійська кухня) 310 г"},
+                {id: "3407", name: "Peri Peri соус Кетчуп (Американська кухня) 320 г"},
+                {id: "3408", name: "Peri Peri соус Кисло-солодкий (Китай.кухня) 320 г"},
+                {id: "3409", name: "Peri Peri соус Кунжутний (Японська кухня) 310 г"},
+                {id: "3410", name: "Peri Peri соус Манго-Чилі (Тайська кухня) 320 г"},
+                {id: "3411", name: "Peri Peri соус Ожиновий з перцем Халапеньйо (Мексиканська кухня) 330 г"},
+                {id: "3424", name: "Peri Peri соус Цезар (Американська кухня) 300 г"},
+                {id: "3422", name: "Peri Peri соус Ткемалі (Грузинська кухня) 320 г"},
+                {id: "3414", name: "Peri Peri соус Пряні трави (Італійська кухня) 310 г"},
+                {id: "3415", name: "Peri Peri соус Сацебелі (Грузинська кухня) 320 г"},
+                {id: "3418", name: "Peri Peri соус Солодкий-Чилі (Тайська кухня) 320 г"},
+                {id: "3419", name: "Peri Peri соус ТАРТАР (Французька кухня) 280 г"},
+                {id: "3420", name: "Peri Peri соус ТЕРІЯКІ sesame & ginger 180 мл"},
+                {id: "3421", name: "Peri Peri соус ТЕРІЯКІ sweet chili 180 мл"},
+                {id: "3417", name: "Peri Peri соус соєвий soy & wheat 180 мл"},
+                {id: "3423", name: "Peri Peri соус УНАГІ sweet & sour 180 мл"},
+                {id: "3412", name: "Peri Peri соус ПЕСТО 200 г"},
                 {id: "3413", name: "Peri Peri соус ПЕСТО ROSSO 200 г"}
             ],
             "6 ЛІТРІВ": [
-                {id: "1", name: "6 ЛІТРІВ концентрований компот абрикосово-персиковий 1000 мл"}, {id: "2", name: "6 ЛІТРІВ концентрований компот яблучно-вишневий 1000 мл"}, {id: "3", name: "6 ЛІТРІВ концентрований компот яблучно-грушевий 1000 мл"},
+                {id: "1", name: "6 ЛІТРІВ концентрований компот абрикосово-персиковий 1000 мл"},
+                {id: "2", name: "6 ЛІТРІВ концентрований компот яблучно-вишневий 1000 мл"},
+                {id: "3", name: "6 ЛІТРІВ концентрований компот яблучно-грушевий 1000 мл"},
                 {id: "4", name: "6 ЛІТРІВ концентрований компот яблучно-малиновий 1000 мл"}
             ],
             "Salateria": [
-                {id: "31001", name: "Salateria Fresh Салатна заправка Медово-Гірчична 335 г"}, {id: "31002", name: "Salateria Fresh Салатна заправка Цезар 320 г"}, {id: "31003", name: "Salateria Fresh Салатна заправка Бальзаміко 335 г"},
-                {id: "3501", name: "Salateria Салатна заправка Original 360 г"}, {id: "3502", name: "Salateria Салатна заправка бальзамічна 360 г"}, {id: "3503", name: "Salateria Салатна заправка КУНЖУТНА 320 г"},
-                {id: "3504", name: "Salateria Салатна заправка соєва з кунжутною олією 360 г"}, {id: "3505", name: "Salateria Салатна заправка соєва з кунжутом 360 г"}
+                {id: "31001", name: "Salateria Fresh Салатна заправка Медово-Гірчична 335 г"},
+                {id: "31002", name: "Salateria Fresh Салатна заправка Цезар 320 г"},
+                {id: "31003", name: "Salateria Fresh Салатна заправка Бальзаміко 335 г"},
+                {id: "3501", name: "Salateria Салатна заправка Original 360 г"},
+                {id: "3502", name: "Salateria Салатна заправка бальзамічна 360 г"},
+                {id: "3503", name: "Salateria Салатна заправка КУНЖУТНА 320 г"},
+                {id: "3504", name: "Salateria Салатна заправка соєва з кунжутною олією 360 г"},
+                {id: "3505", name: "Salateria Салатна заправка соєва з кунжутом 360 г"}
             ],
             "Special Edition": [
                 {id: "3141", name: "SOY SAUCE соус соєвий Класичний special edition 1000 мл"}
             ],
             "YKI": [
-                {id: "3601", name: "YKI соус cоєвий 1000 мл"}, {id: "3602", name: "YKI соус cоєвий 205 мл"}, {id: "3603", name: "YKI соус cоєвий 470 мл"}, {id: "3604", name: "YKI соус cоєвий 890 мл"},
-                {id: "3605", name: "YKI соус Болоньєзе (Італійська кухня) 220 гр"}, {id: "3606", name: "YKI соус Болоньєзе (Італійська кухня) 530 гр"}, {id: "3607", name: "YKI соус Гостро-солодкий (Китайська кухня) 525 гр"},
-                {id: "3608", name: "YKI соус Кисло-солодкий (Китайська кухня) 525 гр"}, {id: "3609", name: "YKI соус соєвий ТЕРІЯКІ (густий) 205 мл"}, {id: "3610", name: "YKI соус соєвий ТЕРІЯКІ 205 мл"},
-                {id: "3611", name: "YKI соус соєвий ТЕРІЯКІ з часником та імбиром (густий) 470 мл"}, {id: "3612", name: "YKI соус соєвий УНАГІ 205 мл"}, {id: "3614", name: "YKI соус Солодкий Чилі 225 гр"},
+                {id: "3601", name: "YKI соус cоєвий 1000 мл"},
+                {id: "3602", name: "YKI соус cоєвий 205 мл"},
+                {id: "3603", name: "YKI соус cоєвий 470 мл"},
+                {id: "3604", name: "YKI соус cоєвий 890 мл"},
+                {id: "3605", name: "YKI соус Болоньєзе (Італійська кухня) 220 гр"},
+                {id: "3606", name: "YKI соус Болоньєзе (Італійська кухня) 530 гр"},
+                {id: "3607", name: "YKI соус Гостро-солодкий (Китайська кухня) 525 гр"},
+                {id: "3608", name: "YKI соус Кисло-солодкий (Китайська кухня) 525 гр"},
+                {id: "3609", name: "YKI соус соєвий ТЕРІЯКІ (густий) 205 мл"},
+                {id: "3610", name: "YKI соус соєвий ТЕРІЯКІ 205 мл"},
+                {id: "3611", name: "YKI соус соєвий ТЕРІЯКІ з часником та імбиром (густий) 470 мл"},
+                {id: "3612", name: "YKI соус соєвий УНАГІ 205 мл"},
+                {id: "3614", name: "YKI соус Солодкий Чилі 225 гр"},
                 {id: "3613", name: "YKI соус Солодкий-Чилі (Тайська кухня) 540 гр"}
+            ],
+            "Любисток": [
+                {id: "3801", name: "Любисток соус соєвий 210 мл"},
+                {id: "3802", name: "Любисток соус соєвий 500 мл"},
+                {id: "3803", name: "Любисток соус соєвий 980 мл"},
+                {id: "3804", name: "Любисток соус УНАГІ 210 мл"},
+                {id: "3805", name: "Любисток соус ТЕРІЯКІ 210 мл"},
+                {id: "3806", name: "Любисток соус ТЕРІЯКІ 500 мл"},
+                {id: "3807", name: "Любисток соус Кисло-солодкий 500 гр"},
+                {id: "3808", name: "Любисток соус Гостро-солодкий 500 гр"}
+            ],
+            "PL": [
+                {id: "301", name: "PL_Соус Hot Chili, 700 мл"},
+                {id: "402", name: "PL_Соус Sweet Chili 1100гр"},
+                {id: "503", name: "PL_Соус Sweet Chili, 700 мл"},
+                {id: "604", name: "PL_Соус соєвий 1000 мл"},
+                {id: "705", name: "PL_Соус соєвий Ketjap 500 мл"},
+                {id: "806", name: "PL_соус теріякі 1кг/відро"},
+                {id: "907", name: "Наповнювач «Вишневий»"},
+                {id: "1008", name: "PL_Соус Томатний 1000 гр"},
+                {id: "1109", name: "PL_Соус Томатний №95_5400 гр"},
+                {id: "12010", name: "PL_Томатна паста 1000 гр"},
+                {id: "12011", name: "PL_Соус ПЕСТО 1кг (D)"}
+            ],
+            "Своє. Свіже": [
+                {id: "3121", name: "Своє. Свіже соус Барбекю 280 гр"},
+                {id: "3122", name: "Своє. Свіже соус Болоньєзе (Італ.кухня) 280 гр"},
+                {id: "3123", name: "Своє. Свіже соус Гостро-солодкий (Китай.кухня) 280 гр"},
+                {id: "3124", name: "Своє. Свіже соус Журавлинний (Англійська кухня) 280 гр"},
+                {id: "3125", name: "Своє. Свіже соус З в’яленими томатами (Італійська кухня) 280 гр"},
+                {id: "3126", name: "Своє. Свіже соус Кетчуп (Американська кухня) 280 гр"},
+                {id: "3127", name: "Своє. Свіже соус Кетчуп Чилі 280 гр"},
+                {id: "3128", name: "Своє. Свіже соус Кисло-солодкий (Китай.кухня) 280 гр"},
+                {id: "3129", name: "Своє. Свіже соус Солодкий-Чилі (Тайська кухня) 280 гр"},
+                {id: "31210", name: "Своє. Свіже соус Тартар 280 гр"}
+            ],
+            "Премія": [
+                {id: "3131", name: "Повна чаша соус соєвий пастеризований 960мл"},
+                {id: "3132", name: "Премія соус соєвий пастеризований \"Теріякі\" 220мл"},
+                {id: "3133", name: "Премія соус соєвий пастеризований \"Теріякі\" 490мл"},
+                {id: "3134", name: "Премія соус соєвий пастеризований 220мл"},
+                {id: "3135", name: "Премія соус соєвий пастеризований 490мл"},
+                {id: "3136", name: "Майонез original 73 % ТМ «Сільпо» 300г"}
             ]
         };
 
@@ -461,5 +568,3 @@ ${alerts}
     </script>
 </body>
 </html>
-
-
