--- a/labeling.html
+++ b/labeling.html
@@ -522,6 +522,14 @@
                 {id: "3134", name: "Премія соус соєвий пастеризований 220мл", life: 12},
                 {id: "3135", name: "Премія соус соєвий пастеризований 490мл", life: 12},
                 {id: "3136", name: "Майонез original 73 % ТМ «Сільпо» 300г", life: 6}
+            ],
+            "Чумак": [
+                {id: "3701", name: "Чумак Соус Соєвий ПЕТ 205мл", life: 12},
+                {id: "3702", name: "Чумак Соус Соєвий ПЕТ 470мл", life: 12},
+                {id: "3703", name: "Чумак Соус Соєвий ПЕТ 920мл", life: 12},
+                {id: "3704", name: "Чумак Соус Соєвий Теріякі ПЕТ 220мл", life: 12},
+                {id: "3705", name: "Чумак Соус Солодкий Чилі ПЕТ 1090г", life: 9},
+                {id: "3706", name: "Чумак Соус Солодкий Чилі ПЕТ 225г", life: 9}
             ]
         };
 
