--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
         <main>
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+                
                 <!-- Чек лист -->
                 <a href="checklist.html" class="link-card group">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-emerald-500 transition-colors">
@@ -39,6 +40,15 @@
                     </svg>
                     <h2>Чек-лист</h2>
                     <p>Загальний контроль зміни</p>
+                </a>
+
+                <!-- Вхідний контроль (НОВА КНОПКА) -->
+                <a href="incoming_control.html" class="link-card group">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-teal-600 transition-colors">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 7.5l-9-5.25L3 7.5m18 0l-9 5.25m9-5.25v9l-9 5.25M3 7.5l9 5.25M3 7.5v9l9 5.25m0-9v9" />
+                    </svg>
+                    <h2>Вхідний контроль</h2>
+                    <p>Сировина та Матеріали</p>
                 </a>
 
                 <!-- Варки соусу -->
@@ -50,6 +60,15 @@
                     <p>Контроль параметрів соусу</p>
                 </a>
 
+                <!-- Фасування -->
+                <a href="packing.html" class="link-card group">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-indigo-500 transition-colors">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 3h6v3H9z" /> <path stroke-linecap="round" stroke-linejoin="round" d="M10 6v2a2 2 0 0 0 2 2h0a2 2 0 0 0 2-2V6" /> <path stroke-linecap="round" stroke-linejoin="round" d="M7 10h10v11a2 2 0 0 1-2 2H9a2 2 0 0 1-2-2V10z" /> <path stroke-linecap="round" stroke-linejoin="round" d="M7 15h10" />
+                    </svg>
+                    <h2>Фасування</h2>
+                    <p>Контроль ваги та герметичності</p>
+                </a>
+
                 <!-- Етикетування -->
                 <a href="labeling.html" class="link-card group">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-blue-500 transition-colors">
@@ -58,15 +77,6 @@
                     </svg>
                     <h2>Етикетування</h2>
                     <p>Звірка етикетки та пакування</p>
-                </a>
-
-                <!-- Фасування -->
-                <a href="packing.html" class="link-card group">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-indigo-500 transition-colors">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 3h6v3H9z" /> <path stroke-linecap="round" stroke-linejoin="round" d="M10 6v2a2 2 0 0 0 2 2h0a2 2 0 0 0 2-2V6" /> <path stroke-linecap="round" stroke-linejoin="round" d="M7 10h10v11a2 2 0 0 1-2 2H9a2 2 0 0 1-2-2V10z" /> <path stroke-linecap="round" stroke-linejoin="round" d="M7 15h10" />
-                    </svg>
-                    <h2>Фасування</h2>
-                    <p>Контроль ваги та герметичності</p>
                 </a>
 
                 <!-- Мийки -->
