--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </a>
 
                 <!-- Вхідний контроль (НОВА КНОПКА) -->
-                <a href="incoming_control.html" class="link-card group">
+                <a href="QC_Incoming_Control.html" class="link-card group">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-teal-600 transition-colors">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M21 7.5l-9-5.25L3 7.5m18 0l-9 5.25m9-5.25v9l-9 5.25M3 7.5l9 5.25M3 7.5v9l9 5.25m0-9v9" />
                     </svg>
@@ -132,3 +132,4 @@
     </script>
 </body>
 </html>
+
