--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <p>Загальний контроль зміни</p>
                 </a>
 
-                <!-- Вхідний контроль (НОВА КНОПКА) -->
+                <!-- Вхідний контроль -->
                 <a href="QC_Incoming_Control.html" class="link-card group">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-teal-600 transition-colors">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M21 7.5l-9-5.25L3 7.5m18 0l-9 5.25m9-5.25v9l-9 5.25M3 7.5l9 5.25M3 7.5v9l9 5.25m0-9v9" />
@@ -60,8 +60,8 @@
                     <p>Контроль параметрів соусу</p>
                 </a>
 
-                <!-- Фасування -->
-                <a href="packing.html" class="link-card group">
+                <!-- Фасування (ОНОВЛЕНО) -->
+                <a href="QC_Master_Combined.html" onclick="localStorage.setItem('qc_initial_tab', 'packing')" class="link-card group">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-indigo-500 transition-colors">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M9 3h6v3H9z" /> <path stroke-linecap="round" stroke-linejoin="round" d="M10 6v2a2 2 0 0 0 2 2h0a2 2 0 0 0 2-2V6" /> <path stroke-linecap="round" stroke-linejoin="round" d="M7 10h10v11a2 2 0 0 1-2 2H9a2 2 0 0 1-2-2V10z" /> <path stroke-linecap="round" stroke-linejoin="round" d="M7 15h10" />
                     </svg>
@@ -69,8 +69,8 @@
                     <p>Контроль ваги та герметичності</p>
                 </a>
 
-                <!-- Етикетування -->
-                <a href="labeling.html" class="link-card group">
+                <!-- Етикетування (ОНОВЛЕНО) -->
+                <a href="QC_Master_Combined.html" onclick="localStorage.setItem('qc_initial_tab', 'labeling')" class="link-card group">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="group-hover:text-blue-500 transition-colors">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M9.568 3H5.25A2.25 2.25 0 003 5.25v4.318c0 .597.237 1.17.659 1.591l9.581 9.581c.699.699 1.78.872 2.607.33a22.53 22.53 0 005.246-5.246c.542-.827.369-1.908-.33-2.607L11.16 3.66A2.25 2.25 0 009.568 3z" />
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 6h.008v.008H6V6z" />
@@ -132,4 +132,3 @@
     </script>
 </body>
 </html>
-
